fixed spacing issue

--- a/landingPage.css
+++ b/landingPage.css
@@ -156,7 +156,7 @@ p {
     }
 
     p {
-        padding: 10px
+        padding: 2px
     }
     
     img {
